<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Oriented</string>
    <string name="app_version">Version 1.0.1.1</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <!--    Drawer-->
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <!--    User Information-->
    <string name="firstName">First name</string>
    <string name="lastName">Last name</string>
    <string name="position">Position</string>
    <string name="fullName">Full name</string>
    <string name="sex">Sex</string>
    <string name="rule">Rule</string>
    <string name="bod">Birth of date</string>
    <string name="bop">Birth of place</string>
    <string name="phoneNumber">Phone number</string>
    <string name="passwordSingIn">Password</string>
    <string name="address">Address</string>
    <string name="emailAddressOnSignUp">Your email will be verify by confirmed in G-mail address.</string>

    <string name="defValueKhmer">00.00 R</string>
    <string name="defValueDollar">00.00 $</string>
    <string name="defValueQuantities">00.00</string>
    <string name="cost">Cost :</string>
    <string name="costLabel">Cost</string>
    <string name="costDollar">Cost Dollar :</string>
    <string name="costDollarLabel">Cost Dollar</string>
    <string name="costKhmer">Cost Khmer :</string>
    <string name="costKhmerLabel">Cost Khmer :</string>
    <string name="option">Option :</string>
    <string name="optionLabel">Option</string>
    <string name="signIn">Sign In</string>
    <string name="verifyOTP">Phone Verification</string>
    <string name="signInSubUser">Sign In with Sub-User</string>
    <string name="signUp">Sign Up</string>
    <string name="signOut">Sign Out</string>
    <string name="aboutUs">About Us</string>
    <string name="username">Username</string>
    <string name="information">Information</string>
    <string name="user">User</string>
    <string name="staff">Staff</string>
    <string name="password">Password</string>
    <string name="subUserPassword">Sub-User Password</string>
    <string name="conPassword">Con-Password</string>
    <string name="next">Next</string>
    <string name="send">Send</string>
    <string name="verify">Verify Now</string>
    <string name="email">*****@gmail.com</string>
    <string name="emailSubUser">Sub-User Email</string>
    <string name="email_address">Email Address</string>
    <string name="contact">Contact</string>
    <string name="powerBy">Power by :</string>
    <string name="powerByText">The student of Royal university of law and Economic</string>
    <string name="description">Description :</string>
    <string name="descriptionLabel">Description</string>
    <string name="selectSize">Select Size</string>
    <string name="selectSweet">Select Sweet</string>
    <string name="small">S</string>
    <string name="medium">M</string>
    <string name="big">B</string>
    <string name="lessSweet">L</string>
    <string name="mediumSweet">M</string>
    <string name="sweet">S</string>
    <string name="addToCart">Add to Cart</string>
    <string name="addToStock">Add to Stock</string>
    <string name="cart">Cart</string>
    <string name="payment">Payment</string>
    <string name="confirmation">Confirmation</string>
    <string name="backToHome">Back to Home</string>
    <string name="back">Back</string>
    <string name="close">Close</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="inbox">Inbox</string>
    <string name="inboxDetail">Inbox Detail</string>
    <string name="promotion">Promotion</string>
    <string name="promotionDetail">Promotion Detail</string>
    <string name="menu">Menu</string>
    <string name="categoryLabel">Category</string>
    <string name="categoryAndItemLabel">Category and Item</string>
    <string name="category">Category :</string>
    <string name="categoryId">Category ID :</string>
    <string name="categoryIdLabel">P0000</string>
    <string name="categoryInformation">Category Information</string>
    <string name="itemLabel">Item</string>
    <string name="item">Item :</string>
    <string name="itemName">Item Name</string>
    <string name="itemCode">Item Code</string>
    <string name="topSale">Top Sales</string>
    <string name="recently">Recently</string>
    <string name="dailySale">Daily Sale</string>
    <string name="totalSale">Total Sale:</string>
    <string name="quantities">Quantities:</string>
    <string name="quantitiesLabel">Quantities</string>
    <string name="unitLabel">Unit</string>
    <string name="totalDiscount">Total Discount:</string>
    <string name="total">Total:</string>
    <string name="totalDollar">Total Dollar:</string>
    <string name="totalKhmer">Total Khmer:</string>
    <string name="codeID">Code ID:</string>
    <string name="pay">Pay</string>
    <string name="checkOut">Check Out</string>
    <string name="price">Price :</string>
    <string name="priceLabel">Price</string>
    <string name="priceKhmer">Price Khmer :</string>
    <string name="priceDollar">Price Dollar :</string>
    <string name="priceDollarLabel">Price Dollar</string>
    <string name="date">Date:</string>
    <string name="dateStart">Start Date</string>
    <string name="dateEnd">End Date</string>
    <string name="subtotal">Sub-Total:</string>
    <string name="subtotalDollar">Sub-Total Dollar:</string>
    <string name="subtotalKhmer">Sub-Total Khmer:</string>
    <string name="vat">VAT:</string>
    <string name="vatHint">00.00 %:</string>
    <string name="discount">Discount:</string>
    <string name="discountHint">00.00 %</string>
    <string name="serviceBy">Service by:</string>
    <string name="amountDollar">Dollar:</string>
    <string name="amountDollarHint">00.00 $</string>
    <string name="amountKhmer">Khmer:</string>
    <string name="amountKhmerHint">000.00 R</string>
    <string name="paybackDollar">Payback Dollar:</string>
    <string name="paybackDollarHint">00.00 $</string>
    <string name="paybackKhmer">Payback Khmer:</string>
    <string name="paybackKhmerHint">000.00 R</string>
    <string name="paybackLabel">Payback</string>
    <string name="bill">Bill</string>
    <string name="invoice">Invoice</string>
    <string name="inventory">Inventory</string>
    <string name="stock">Stock</string>
    <string name="available">Available</string>
    <string name="unavailable">Unavailable</string>
    <string name="stockInventory">Stock Inventory</string>
    <string name="dashboard">Dashboard</string>
    <string name="stockCategory">Stock Category</string>
    <string name="stockItem">Stock Item</string>
    <string name="stockItemInfo">Stock Item Information</string>
    <string name="stockCategoryInfo">Stock Category Information</string>
    <string name="supplier">Supplier</string>
    <string name="totalSupplier">Total Supplier :</string>
    <string name="pickDate">Start Date - End Date</string>
    <string name="purchase">Purchase</string>
    <string name="totalAmount">Total Amount :</string>
    <string name="totalPayment">Total Payment :</string>
    <string name="totalBalance">Total Balance :</string>
    <string name="totalCategory">Total Category :</string>
    <string name="totalItem">Total Item :</string>
    <string name="sales">Sales</string>
    <string name="taxAmount">Tax Amount :</string>
    <string name="purchasesOutStanding">Purchases Outstanding :</string>
    <string name="saleOutStanding">Sales Outstanding :</string>
    <string name="profit">Profit</string>
    <string name="totalProfitThisMonth">Total Profit this Month :</string>
    <string name="icon">Icon Item</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="empty">Empty</string>
    <!--    message-->
    <string name="msg_search">Search here...</string>
    <string name="msg_SignOut">Do you want to sign out?</string>
    <string name="msg_ContactToService">If anything wrong please contact to our service</string>
    <string name="msg_PhoneNumberService">070-723-618</string>
    <string name="msg_confirmation">You have successfully completed your order</string>
    <string name="msg_pay">Do you want to pay it now? Are you sure?</string>
    <string name="msg_add">Do you want to add this to list? Are you sure?</string>
    <string name="msg_delete">Do you want to delete this from list? Are you sure?</string>
    <string name="msg_close"> Are you sure? \nDo you want to close this?</string>
    <string name="msg_category_name_blank">Please fill at least Category name</string>
    <string name="msg_item_name_blank">Please fill at least Item name</string>
    <string name="msg_access_deny">Access Deny</string>
    <string name="msg_cant_save">Something wrong, operation fail</string>
    <string name="msg_toast_login_fail">Login Fail</string>
    <string name="msg_toast_check_email_and_pass">Please check Email and Password again</string>
    <string name="msg_cant_save_item">There is no category on the list</string>
    <string name="msg_cant_edit_item">Something went wrong!</string>
    <string name="msg_cant_delete_item">Something went wrong!</string>
    <string name="msg_cant_delete_category">In this category have item/items in it, so you can not delete it</string>
    <string name="msg_cant_delete_default_category">This category is a default category, so you can not delete it</string>
    <string name="msg_cant_push_item">Something went wrong!</string>
    <string name="msg_something_wrong">Something went wrong!</string>
    <string name="msg_cancel">Operation has been cancel</string>
    <string name="msg_wrong_email">Please check your email again</string>
    <string name="msg_complete">Operation Complete</string>
    <string name="msg_verity_email">Please verify your email</string>
    <string name="msg_send_verity_email">We send you Verification to your email, please go to your email.</string>
    <string name="msg_send_reset_pass_email">We send you reset password request to your email, please go to your email.</string>
    <string name="msg_to_send_verity_email">Do you want us to send you a Verification to this Email?</string>
    <string name="msg_to_send_reset_pass_email">Do you want us to send reset password request to this Email?</string>
    <string name="msg_dont_have_category">There is no category in the record, do you want create new category?</string>
    <string name="msg_save_category">Are you sure, do you want create new category?</string>
    <string name="msg_save_item">Are you sure, do you want create new item?</string>
    <string name="msg_email_exiting">This email already register.</string>
    <string name="msg_cant_send_email_verification">Currently, we can\'t send you verification to your Email.</string>
</resources>
