<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_pos"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <com.reaksmeyarun.pda.customView.MyTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"/>
            <com.reaksmeyarun.pda.customView.MyTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/username"/>
            <com.reaksmeyarun.pda.customView.MyTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rule"/>
        </LinearLayout>
    </LinearLayout>
</layout>