<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_weight="1">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginBottom="54dp"/>
        <com.post.transfer.lanpost.mycustom.MyTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirmation"
            android:textSize="24dp"
            android:textAlignment="center"
            android:layout_marginTop="@dimen/bigLargeMargin"/>
        <com.post.transfer.lanpost.mycustom.MyTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/msg_confirmation"
            android:textAlignment="center"
            android:inputType="textMultiLine"
            android:layout_marginTop="@dimen/defMargin"/>
    </LinearLayout>
    <com.post.transfer.lanpost.mycustom.ButtonPositive
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/defMargin"
        android:text="@string/backToHome"/>
</LinearLayout>