<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View"/>
        <variable
            name="vmSetting"
            type="com.reaksmeyarun.pda.viewmodel.SettingViewModel" />
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="@{safeUnbox(vmSetting.settingDM.showSettingZ0241)?View.VISIBLE:View.GONE}">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">
            <ImageView
                android:layout_width="?attr/actionBarSize"
                android:layout_height="?attr/actionBarSize"
                android:src="@drawable/ic_arrow_left_basecolor"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:onClick="@{vmSetting::handleShowZ0240}"/>
            <com.reaksmeyarun.pda.customView.MyTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/itemLabel"
                android:textSize="@dimen/largeTitleSize"
                android:gravity="center"/>
        </RelativeLayout>
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/bigMargin">
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="@dimen/cardview_default_elevation"
                app:cardCornerRadius="@dimen/cardview_default_radius"
                android:layout_margin="2dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/bigMargin">
                    <com.reaksmeyarun.pda.customView.MyTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/icon"
                        android:textAlignment="center"/>
                    <ImageView
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_gravity="center"
                        android:scaleType="centerInside"
                        android:layout_marginTop="@dimen/defMargin"
                        android:background="@drawable/ic_pos"/>
                    <com.reaksmeyarun.pda.customView.MyTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/itemName"
                        android:layout_marginTop="@dimen/bigMargin"/>
                    <com.reaksmeyarun.pda.customView.MyEditText
                        android:id="@+id/etItemName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/itemName"
                        android:layout_marginTop="@dimen/defMargin"/>
                    <com.reaksmeyarun.pda.customView.MyTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/itemCode"
                        android:layout_marginTop="@dimen/bigMargin"/>
                    <com.reaksmeyarun.pda.customView.MyEditText
                        android:id="@+id/etItemCode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/itemCode"
                        android:inputType="numberDecimal"
                        android:layout_marginTop="@dimen/defMargin"/>
                    <com.reaksmeyarun.pda.customView.MyTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/categoryLabel"
                        android:layout_marginTop="@dimen/bigMargin"/>
                    <Spinner
                        android:id="@+id/spinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/defMargin"/>
                    <com.reaksmeyarun.pda.customView.MyTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/descriptionLabel"
                        android:layout_marginTop="@dimen/bigMargin"/>
                    <com.reaksmeyarun.pda.customView.MyEditText
                        android:id="@+id/etItemDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/description"
                        android:lines="5"
                        android:gravity="top"
                        android:layout_marginTop="@dimen/defMargin"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
        <com.reaksmeyarun.pda.customView.ButtonPositive
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:onClick="@{vmSetting::handleCreateNewItem}"
            android:layout_margin="2dp"/>
    </LinearLayout>
</layout>