<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <import type="android.view.View"/>
        <variable
            name="vmStock"
            type="com.reaksmeyarun.pda.viewmodel.StockInventoryViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="@{safeUnbox(vmStock.stockInventoryDM.showStockS0140)?View.VISIBLE:View.GONE}">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">
            <ImageView
                android:layout_width="?attr/actionBarSize"
                android:layout_height="?attr/actionBarSize"
                android:src="@drawable/ic_arrow_left_basecolor"
                android:onClick="@{vmStock::handleShowStockS0120}"
                style="@style/Widget.AppCompat.Button.Borderless"/>
            <com.post.transfer.lanpost.mycustom.MyTextView
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:textStyle="bold"
                android:textSize="@dimen/bigLabelSize"
                android:text="@string/stockItemInfo"
                android:gravity="center"
                android:textAlignment="center"/>
        </RelativeLayout>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1"
                android:padding="@dimen/bigMargin">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <com.post.transfer.lanpost.mycustom.MyTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/category"
                        android:layout_weight="3"
                        android:layout_gravity="center"/>
                    <com.post.transfer.lanpost.mycustom.MyTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textAlignment="textEnd"
                        android:layout_weight="1"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/defMargin">
                    <com.post.transfer.lanpost.mycustom.MyTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/item"
                        android:layout_weight="3"
                        android:layout_gravity="center"/>
                    <com.post.transfer.lanpost.mycustom.MyTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textAlignment="textEnd"
                        android:layout_weight="1"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_marginTop="@dimen/defMargin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <com.post.transfer.lanpost.mycustom.MyTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/quantities"
                        android:layout_weight="3"
                        android:layout_gravity="center"/>
                    <com.post.transfer.lanpost.mycustom.MyTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textAlignment="textEnd"
                        android:hint="@string/defValueQuantities"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/defMargin">
                    <com.post.transfer.lanpost.mycustom.MyTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:text="@string/costDollar"/>
                    <com.post.transfer.lanpost.mycustom.MyTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/defValueDollar"
                        android:textAlignment="textEnd"
                        android:layout_weight="1"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/defMargin">
                    <com.post.transfer.lanpost.mycustom.MyTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:text="@string/costKhmer"/>
                    <com.post.transfer.lanpost.mycustom.MyTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/defValueKhmer"
                        android:textAlignment="textEnd"
                        android:layout_weight="1"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/defMargin">
                    <com.post.transfer.lanpost.mycustom.MyTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:text="@string/priceDollar"/>
                    <com.post.transfer.lanpost.mycustom.MyTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/defValueDollar"
                        android:textAlignment="textEnd"
                        android:layout_weight="1"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/defMargin">
                    <com.post.transfer.lanpost.mycustom.MyTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:text="@string/priceKhmer"/>
                    <com.post.transfer.lanpost.mycustom.MyTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/defValueKhmer"
                        android:textAlignment="textEnd"
                        android:layout_weight="1"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/defMargin">
                    <com.post.transfer.lanpost.mycustom.MyTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:text="@string/description"/>
                    <com.post.transfer.lanpost.mycustom.MyTextView
                        android:paddingStart="@dimen/defMargin"
                        android:paddingEnd="@dimen/defMargin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/description"
                        android:inputType="textMultiLine"
                        android:lines="3"
                        android:layout_weight="1"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="4dp">
                    <com.post.transfer.lanpost.mycustom.MyTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/dateStart"
                        android:layout_weight="1"/>
                    <com.post.transfer.lanpost.mycustom.MyTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/dateEnd"
                        android:layout_weight="1"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/defMargin"
                    android:layout_marginBottom="4dp">
                    <DatePicker
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:clickable="false"
                        android:layout_marginEnd="2dp"/>
                    <DatePicker
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:clickable="false"
                        android:layout_marginStart="2dp"/>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>